Add some meta tags to the page template

--- a/scripts/lib/translation-status/template.html
+++ b/scripts/lib/translation-status/template.html
@@ -7,6 +7,12 @@
 		<meta name="theme-color" content="hsl(273, 37%, 93%)" media="(prefers-color-scheme: light)" />
 
 		<title>Astro Docs Translation Status</title>
+		<meta name="description" content="Translation progress tracker for the Astro Docs site. See how much has been translated in your language and get involved!">
+		<link rel="canonical" href="https://i18n.docs.astro.build/">
+		<meta property="og:title" content="Astro Docs Translation Status" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://i18n.docs.astro.build/" />
+		<meta property="og:description" content="Translation progress tracker for the Astro Docs site. See how much has been translated in your language and get involved!" />
 
 		<style>
 			:root {
