Styling tweaks for table header

--- a/scripts/lib/translation-status/template.html
+++ b/scripts/lib/translation-status/template.html
@@ -157,6 +157,8 @@
 				position: sticky;
 				top: -1px;
 				background: var(--theme-table-header);
+				white-space: nowrap;
+				padding-inline: .3rem;
 			}
 			.status-by-page th,
 			.status-by-page td {
