Smaller table text

--- a/scripts/lib/translation-status/template.html
+++ b/scripts/lib/translation-status/template.html
@@ -152,6 +152,7 @@
 				border-collapse: collapse;
 				margin-inline: -1rem;
 				border: var(--theme-table-border);
+				font-size: 0.8125rem;
 			}
 			.status-by-page th {
 				position: sticky;
