Smaller list font size

--- a/scripts/lib/translation-status/template.html
+++ b/scripts/lib/translation-status/template.html
@@ -126,6 +126,9 @@
 			a:hover {
 				text-decoration: underline;
 			}
+			ul {
+				font-size: 0.875rem;
+			}
 			details summary {
 				cursor: pointer;
 				user-select: none;
