Restyle “Create page” buttons to not abuse `<code>`

--- a/scripts/lib/translation-status/template.html
+++ b/scripts/lib/translation-status/template.html
@@ -139,16 +139,16 @@
 			details h5 {
 				margin-top: 1rem !important;
 			}
-			details *:last-child {
+			details > :last-child {
 				margin-bottom: 1rem;
 			}
-			code {
-				font-family: var(--font-mono);
-				font-size: 0.95rem;
+			.create-button {
+				padding: 0.1em 0.5em;
 				background-color: hsl(213deg 89% 64% / 20%);
-				padding-inline: 0.4rem;
-				padding-block: 0.1rem;
-				border-radius: 0.2rem;
+				display: inline-block;
+				border-radius: .5em;
+				font-weight: bold;
+				font-size: 0.75rem;
 			}
 			.status-by-page {
 				margin-bottom: 1rem;
