--- a/scripts/lib/translation-status/template.html
+++ b/scripts/lib/translation-status/template.html
@@ -7,12 +7,18 @@
 		<meta name="theme-color" content="hsl(273, 37%, 93%)" media="(prefers-color-scheme: light)" />
 
 		<title>Astro Docs Translation Status</title>
-		<meta name="description" content="Translation progress tracker for the Astro Docs site. See how much has been translated in your language and get involved!">
-		<link rel="canonical" href="https://i18n.docs.astro.build/">
+		<meta
+			name="description"
+			content="Translation progress tracker for the Astro Docs site. See how much has been translated in your language and get involved!"
+		/>
+		<link rel="canonical" href="https://i18n.docs.astro.build/" />
 		<meta property="og:title" content="Astro Docs Translation Status" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://i18n.docs.astro.build/" />
-		<meta property="og:description" content="Translation progress tracker for the Astro Docs site. See how much has been translated in your language and get involved!" />
+		<meta
+			property="og:description"
+			content="Translation progress tracker for the Astro Docs site. See how much has been translated in your language and get involved!"
+		/>
 
 		<style>
 			:root {
@@ -129,6 +135,9 @@
 			ul {
 				font-size: 0.875rem;
 			}
+			details {
+				margin-bottom: 1.25rem;
+			}
 			details summary {
 				cursor: pointer;
 				user-select: none;
@@ -146,7 +155,7 @@
 				padding: 0.1em 0.5em;
 				background-color: hsl(213deg 89% 64% / 20%);
 				display: inline-block;
-				border-radius: .5em;
+				border-radius: 0.5em;
 				font-weight: bold;
 				font-size: 0.75rem;
 			}
@@ -162,7 +171,7 @@
 				top: -1px;
 				background: var(--theme-table-header);
 				white-space: nowrap;
-				padding-inline: .3rem;
+				padding-inline: 0.3rem;
 			}
 			.status-by-page th,
 			.status-by-page td {
@@ -191,6 +200,12 @@
 			}
 			.status-by-page td:not(:first-of-type) a {
 				text-decoration: none;
+			}
+			.progress-summary {
+				font-size: 0.8125rem;
+			}
+			.progress-bar {
+				font-size: 0.6875rem;
 			}
 		</style>
 	</head>
