Add needs reviews section to i18n.docs.astro.build

--- a/scripts/lib/translation-status/template.html
+++ b/scripts/lib/translation-status/template.html
@@ -230,6 +230,9 @@
 				<h2>Translation progress by language</h2>
 				<!-- TranslationStatusByLanguage -->
 
+				<h2>Translations that need reviews</h2>
+				<!-- TranslationNeedsReview -->
+
 				<h2>Translation status by content</h2>
 			</div>
 			<!-- This table is not limited to the viewport to allow horizontal scrolling -->
